В components будут хранится файлы компонентов реакт Передаем аргументы в тесстовую компоненту Небольшой компонент для ознакомления Изменили расположение файла и название

--- a/index.html
+++ b/index.html
@@ -6,9 +6,6 @@
     <script src="dist/main.js"></script>
 </head>
 <body>
-    <h1>Main page</h1>
-    <div id="app"}>
-
-    </div>
+    <div id="root"></div>
 </body>
 </html>
